[gd_scene load_steps=18 format=2]

[ext_resource path="res://Login.gd" type="Script" id=1]
[ext_resource path="res://client_data/icons/male.png" type="Texture" id=2]

[node name="Login" type="Node"]

script = ExtResource( 1 )

[node name="PanelContainer" type="PanelContainer" parent="."]

anchor_left = 2
anchor_top = 2
anchor_right = 2
anchor_bottom = 2
focus_ignore_mouse = false
focus_stop_mouse = true
size_flags_horizontal = 2
size_flags_vertical = 2
margin_left = 158.0
margin_top = 91.0
margin_right = -139.0
margin_bottom = -107.0

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]

focus_ignore_mouse = false
focus_stop_mouse = false
size_flags_horizontal = 2
size_flags_vertical = 2
margin_left = 7.0
margin_top = 7.0
margin_right = 290.0
margin_bottom = 191.0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/HBoxContainer"]

focus_ignore_mouse = false
focus_stop_mouse = false
size_flags_horizontal = 2
size_flags_vertical = 2
margin_left = 64.0
margin_top = 0.0
margin_right = 151.0
margin_bottom = 184.0
alignment = 1

[node name="Label" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer"]

focus_ignore_mouse = true
focus_stop_mouse = true
size_flags_horizontal = 2
size_flags_vertical = 0
margin_left = 0.0
margin_top = 11.0
margin_right = 87.0
margin_bottom = 25.0
text = "Player Name"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="PlayerName" type="LineEdit" parent="PanelContainer/HBoxContainer/VBoxContainer"]

focus_ignore_mouse = false
focus_stop_mouse = true
size_flags_horizontal = 2
size_flags_vertical = 2
margin_left = 0.0
margin_top = 29.0
margin_right = 87.0
margin_bottom = 53.0
placeholder_alpha = 0.6
focus_mode = 2
caret_blink = false
caret_blink_speed = 0.65

[node name="Gender" type="OptionButton" parent="PanelContainer/HBoxContainer/VBoxContainer"]

focus_ignore_mouse = false
focus_stop_mouse = true
size_flags_horizontal = 2
size_flags_vertical = 2
margin_left = 0.0
margin_top = 57.0
margin_right = 87.0
margin_bottom = 77.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false
align = 0
selected = -1
items = [  ]

[node name="HairStyle" type="OptionButton" parent="PanelContainer/HBoxContainer/VBoxContainer"]

focus_ignore_mouse = false
focus_stop_mouse = true
size_flags_horizontal = 2
size_flags_vertical = 2
margin_left = 0.0
margin_top = 81.0
margin_right = 87.0
margin_bottom = 101.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false
align = 0
selected = -1
items = [  ]

[node name="HairColor" type="OptionButton" parent="PanelContainer/HBoxContainer/VBoxContainer"]

focus_ignore_mouse = false
focus_stop_mouse = true
size_flags_horizontal = 2
size_flags_vertical = 2
margin_left = 0.0
margin_top = 105.0
margin_right = 87.0
margin_bottom = 125.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false
align = 0
selected = -1
items = [  ]

[node name="Class" type="OptionButton" parent="PanelContainer/HBoxContainer/VBoxContainer"]

focus_ignore_mouse = false
focus_stop_mouse = true
size_flags_horizontal = 2
size_flags_vertical = 2
margin_left = 0.0
margin_top = 129.0
margin_right = 87.0
margin_bottom = 149.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false
align = 0
selected = -1
items = [  ]

[node name="Enter" type="Button" parent="PanelContainer/HBoxContainer/VBoxContainer"]

focus_ignore_mouse = false
focus_stop_mouse = true
size_flags_horizontal = 2
size_flags_vertical = 2
margin_left = 0.0
margin_top = 153.0
margin_right = 87.0
margin_bottom = 173.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Enter World"
flat = false

[node name="TextureFrame" type="TextureRect" parent="PanelContainer/HBoxContainer"]

focus_ignore_mouse = true
focus_stop_mouse = true
size_flags_horizontal = 2
size_flags_vertical = 2
margin_left = 155.0
margin_top = 0.0
margin_right = 219.0
margin_bottom = 184.0
texture = ExtResource( 2 )
stretch_mode = 4

[node name="PopupPanel" type="PopupPanel" parent="PanelContainer"]

visible = false
focus_ignore_mouse = false
focus_stop_mouse = true
size_flags_horizontal = 2
size_flags_vertical = 2
margin_left = 7.0
margin_top = 7.0
margin_right = 290.0
margin_bottom = 191.0
popup_exclusive = true

[node name="Hostname" type="LineEdit" parent="PanelContainer/PopupPanel"]

focus_ignore_mouse = false
focus_stop_mouse = true
size_flags_horizontal = 2
size_flags_vertical = 2
margin_left = 11.0
margin_top = 38.0
margin_right = 171.0
margin_bottom = 62.0
text = "127.0.0.1"
placeholder_alpha = 0.6
focus_mode = 2
caret_blink = false
caret_blink_speed = 0.65

[node name="Port" type="LineEdit" parent="PanelContainer/PopupPanel"]

focus_ignore_mouse = false
focus_stop_mouse = true
size_flags_horizontal = 2
size_flags_vertical = 2
margin_left = 182.0
margin_top = 36.0
margin_right = 240.0
margin_bottom = 60.0
text = "10000"
placeholder_alpha = 0.6
focus_mode = 2
caret_blink = false
caret_blink_speed = 0.65

[node name="Iplabel" type="Label" parent="PanelContainer/PopupPanel"]

focus_ignore_mouse = true
focus_stop_mouse = true
size_flags_horizontal = 2
size_flags_vertical = 0
margin_left = 14.0
margin_top = 16.0
margin_right = 124.0
margin_bottom = 30.0
text = "Server IP"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="PortLabel" type="Label" parent="PanelContainer/PopupPanel"]

focus_ignore_mouse = true
focus_stop_mouse = true
size_flags_horizontal = 2
size_flags_vertical = 0
margin_left = 181.0
margin_top = 11.0
margin_right = 221.0
margin_bottom = 25.0
text = "Port"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ConnectButton" type="Button" parent="PanelContainer/PopupPanel"]

focus_ignore_mouse = false
focus_stop_mouse = true
size_flags_horizontal = 2
size_flags_vertical = 2
margin_left = 65.0
margin_top = 80.0
margin_right = 196.0
margin_bottom = 100.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Connect"
flat = false

[connection signal="item_selected"  from="PanelContainer/HBoxContainer/VBoxContainer/Gender"  to="." method="_on_OptionButton_item_selected" binds=[  ]]

[connection signal="pressed"  from="PanelContainer/HBoxContainer/VBoxContainer/Enter"  to="." method="_on_Enter_pressed" binds=[  ]]

[connection signal="pressed"  from="PanelContainer/PopupPanel/ConnectButton"  to="." method="_on_ConnectButton_pressed" binds=[  ]]
